--- a/voc-dom/package.json
+++ b/voc-dom/package.json
@@ -7,11 +7,10 @@
   "description": "",
   "main": "dom.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "jsdom": "^13.0.0"
   }
