--- a/voc-http/package.json
+++ b/voc-http/package.json
@@ -7,11 +7,10 @@
   "description": "",
   "main": "http.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "request": "^2.88.0",
     "request-promise": "^4.2.2"
