--- a/voc-dom/package.json
+++ b/voc-dom/package.json
@@ -4,12 +4,9 @@
     "dom.js": "browser-dom.js"
   },
   "version": "1.0.0",
-  "description": "",
+  "description": "Utility package for voc-api.",
   "main": "dom.js",
-  "scripts": {
-  },
-  "keywords": [],
-  "author": "",
+  "author": "Thor Galle",
   "license": "MIT",
   "dependencies": {
     "jsdom": "^13.0.0"
