--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "Unofficial API for vocabulary.com. Manage lists and get definitions.",
   "main": "vocabulary-api.js",
   "scripts": {
-    "preinstall": "npm --prefix voc-dom install && npm --prefix voc-http install",
     "test": "./node_modules/.bin/mocha",
     "generate-docs": "node_modules/.bin/jsdoc --configure .jsdoc.json --verbose vocabulary-api.js"
   },
@@ -12,8 +11,8 @@
   "license": "MIT",
   "dependencies": {
     "underscore": "^1.9.1",
-    "voc-dom": "file:voc-dom",
-    "voc-http": "file:voc-http"
+    "voc-dom": "th0rgall/voc-dom",
+    "voc-http": "th0rgall/voc-http"
   },
   "devDependencies": {
     "chai": "^4.2.0",
