--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "voc-api",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Unofficial API for vocabulary.com. Manage lists and get definitions.",
   "main": "vocabulary-api.js",
   "scripts": {
-    "test": "./node_modules/.bin/mocha",
-    "generate-docs": "node_modules/.bin/jsdoc --configure .jsdoc.json --verbose vocabulary-api.js"
+    "test": "npx mocha",
+    "doc": "npx jsdoc --configure .jsdoc.json --verbose vocabulary-api.js"
   },
   "author": "@th0rgall",
   "license": "MIT",
   "dependencies": {
-    "underscore": "^1.9.1",
+    "lodash.clone": "^4.5.0",
     "voc-dom": "th0rgall/voc-dom",
     "voc-http": "th0rgall/voc-http"
   },
